# gst_rtsp_client

./: CMakeLists.txt  LICENSE  README.md  gst_rtsp_client_api.py  multip_thread_rtsp.py  multip_thread_rtsp_one.py  multip_thread_rtsp_one_mmap_client.py  multip_thread_rtsp_one_mmap_server.py  multip_thread_rtsp_one_socket_client.py  multip_thread_rtsp_one_socket_server.py  multip_thread_rtsp_rknn.py
backup/: CMakeLists_back1.txt
gst_demo/: demo_gst_rtsp_.cpp  demo_gstreamer_3_element_factory.cpp  demo_gstreamer_rtsp.cpp  demo_gstreamer_rtsp_uridecodebin_265_.cpp  main.cpp  main_gst_rtsp_rga_3.cpp  main_gst_rtsp_rga_5.cpp
gst_temp/: demo_gstreamer_1_version.cpp  demo_gstreamer_2_init.cpp  demo_gstreamer_4_get_element_info.cpp  demo_gstreamer_5_link_elements.cpp  demo_gstreamer_6_pads.cpp  demo_gstreamer_8_helloworld.cpp  gst_rtsp_demo1.c  main_cv_rtsp.cpp  main_gst_rtsp_.c  main_gst_rtsp_rga_.cpp  main_gst_rtsp_rga_2.cpp  main_gst_rtsp_rga_4.cpp
include/: .gst_rtsp_client.h.swn  .gst_rtsp_client.h.swo  .gst_rtsp_client.h.swp  arrayqueue.h  gst_rtsp_client.h
librga/include/: drmrga.h
librga/rga/: im2d.cpp  im2d.h  platform_gralloc4.h  rga.h
pyapi/: gst_rtsp_client_api.py
src/: .gst_rtsp_client.cpp.swn  .gst_rtsp_client.cpp.swo  gst_rtsp_client.cpp  setup.cpp
test/: c_test_main_rtsp.cpp
